cabal-version: 3.6
name:          yaifl
version:       0.0.10.540
synopsis:      Yet another interactive fiction library.
description:   Yet another interactive fiction library.
homepage:      https://github.com/PPKFS/yaifl
bug-reports:   https://github.com/PPKFS/yaifl/issues
license:       MIT
author:        Avery
maintainer:    Avery <thecommunistduck@hotmail.co.uk>
copyright:     2022-2023 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.4.7

source-repository head
  type:     git
  location: https://github.com/PPKFS/yaifl.git

common common-options
  build-depends:
    base >= 4.17.2 && < 5,
    containers >= 0.6.7 && < 1.7,
    template-haskell >= 2.19.0 && < 3.20,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    effectful-th >= 1.0.0 && < 2.1,
    text >= 2.0.2 && < 3.1,
    named >= 0.3.0 && < 1.0,
    text-display >= 0.0.5 && < 1.0,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    solitude >= 0.0.0.0 && <= 10.0.0.0,
    bearmonadterminal,
    linear

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

executable tony-zorks-rogue-skater
  import:          common-options
  main-is: Main.hs
  hs-source-dirs:  src
  other-modules:
    TZRS.Prelude
    TZRS.Entity
    TZRS.RuleEffects
    TZRS.Rulebook
